# sql-similarity-py

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
grammars/snowflake/: SnowflakeLexer.py  SnowflakeParser.interp  SnowflakeParser.tokens
src/sql_similarity/: __init__.py
src/sql_similarity/domain/: comparator.py  parser.py
src/sql_similarity/grammars/snowflake/: SnowflakeLexer.interp  SnowflakeParser.py  SnowflakeParserListener.py
src/sql_similarity/presentation/: __init__.py  args.py  batch_formatter.py  cli.py  exit_codes.py  formatter.py
src/sql_similarity/presentation/controllers/: __init__.py  base.py  batch.py  pair.py
src/sql_similarity/service/: __init__.py  batch.py  comparison.py
tests/: __init__.py
tests/domain/: test_comparator.py  test_parser.py
tests/fixtures/: complex_join.sql  simple_select.sql  simple_select_modified.sql
tests/presentation/: test_args.py  test_batch_formatter.py  test_cli.py  test_formatter.py
tests/presentation/test_controllers/: __init__.py  test_batch.py  test_pair.py
tests/service/: test_batch.py  test_comparison.py
