[project]
name = "sql-similarity"
version = "0.1.0"
description = "CLI tool to compare SQL files using tree edit distance"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "antlr4-tools>=0.2.2",
    "antlr4-python3-runtime>=4.13.0",
    "apted>=1.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
sql-similarity = "sql_similarity.presentation.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sql_similarity"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
